<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.fragment.PerfilFragment"
    android:orientation="vertical"
    android:gravity="center">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_titulo_fragment_foto"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:gravity="center"/>

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:cardCornerRadius="15dp"
        android:layout_gravity="center">
        <ImageView
            android:id="@+id/ivFotoPerfil"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:contentDescription="@string/iv_fotoalumna_fragment_foto" />
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="40dp">
        <Button
            android:id="@+id/btnSeleccionar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_seleccionar_fragment_foto"
            />
        <androidx.legacy.widget.Space
            android:layout_width="20dp"
            android:layout_height="wrap_content"/>
        <Button
            android:id="@+id/btnActualizarFoto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_actualizar_fragment_foto"/>
    </LinearLayout>

</LinearLayout>