<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    card_view:cardCornerRadius="15dp"
    card_view:cardBackgroundColor="#E6E5E2"
    card_view:cardElevation="5dp"
    android:layout_margin="10dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="13dp"
        android:baselineAligned="false">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.5"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/tvDiaHorario"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:text=""
                android:textSize="35sp"
                android:textColor="@color/black"
                android:layout_gravity="center"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="13dp"
                android:src="@drawable/ic_baseline_double_arrow_24"
                android:layout_gravity="center"
                android:contentDescription="@string/iv_flecha_cardview_horario" />
        </LinearLayout>

        <TableLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2.5">
            <TableRow>
                <TextView
                    android:text="@string/tv_curso_cardview_horario"
                    android:textColor="@color/black"
                    android:layout_marginRight="10dp"/>
                <TextView
                    android:id="@+id/tvIdCursoHorario"
                    android:text=""
                    android:textColor="@color/black"/>
            </TableRow>
            <TableRow>
                <TextView
                    android:text="@string/tv_docente_cardview_horario"
                    android:textColor="@color/black"
                    android:layout_marginRight="10dp"/>
                <TextView
                    android:id="@+id/tvDocenteHorario"
                    android:text=""
                    android:textColor="@color/black"/>
            </TableRow>
            <TableRow>
                <TextView
                    android:text="@string/tv_horainico_cardview_horario"
                    android:textColor="@color/black"
                    android:layout_marginRight="10dp"/>
                <TextView
                    android:id="@+id/tvHoraInicio"
                    android:text=""
                    android:textColor="@color/black"/>
            </TableRow>
            <TableRow>
                <TextView
                    android:text="@string/tv_horafin_cardview_horario"
                    android:textColor="@color/black"
                    android:layout_marginRight="10dp"/>
                <TextView
                    android:id="@+id/tvHoraFin"
                    android:text=""
                    android:textColor="@color/black"/>
            </TableRow>
            <TableRow>
                <TextView
                    android:text="@string/tv_aula_cardview_horario"
                    android:textColor="@color/black"
                    android:layout_marginRight="10dp"/>
                <TextView
                    android:id="@+id/tvAula"
                    android:text=""
                    android:textColor="@color/black"/>
            </TableRow>
        </TableLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>