<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.fragment.impl.MenuFragment"
    android:orientation="vertical"
    android:background="#1a1a1a"
    android:layout_gravity="center">

    <androidx.cardview.widget.CardView
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        app:cardCornerRadius="15dp">
        <ImageView
            android:id="@+id/ivAlumna"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/perfilb"
            android:contentDescription="@string/iv_perfil_desc_menu" />
    </androidx.cardview.widget.CardView>


    <Button
        android:id="@+id/btnCambiarFoto"
        android:layout_height="35dp"
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:text="Cambiar foto"
        android:drawableLeft="@drawable/ic_cambiar"
        app:backgroundTint="#878383"
        android:textStyle="bold"
        android:textSize="11sp"
        android:padding="5dp"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="10dp" />

    <TextView
        android:id="@+id/tvNombre"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_gravity="center"
        android:text="@string/tv_nombre_alumna_menu"
        android:gravity="center"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="#ffffff" />

    <androidx.legacy.widget.Space
        android:layout_width="410dp"
        android:layout_height="10dp"/>

    <TextView
        android:id="@+id/tvIdAlumna"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:text="@string/tv_id_alumna_menu"
        android:textAlignment="center"
        android:textSize="15sp"
        android:textStyle="bold"
        android:textColor="#ffffff" />

    <androidx.legacy.widget.Space
        android:layout_width="410dp"
        android:layout_height="10dp"/>

    <Button
        android:id="@+id/btnCurso"
        android:layout_width="335dp"
        android:layout_height="57dp"
        android:layout_gravity="center"
        android:paddingLeft="10dp"
        app:backgroundTint="#6CED72"
        android:text="@string/btn_curso_menu"
        android:textColor="#ffffff"
        android:textStyle="bold"
        android:drawableLeft="@drawable/ic_curso"
        android:drawableRight="@drawable/ic_baseline_chevron_right_24"
        android:drawablePadding="25dp" />

    <androidx.legacy.widget.Space
        android:layout_width="410dp"
        android:layout_height="10dp"/>

    <Button
        android:id="@+id/btnNota"
        android:layout_width="335dp"
        android:layout_height="57dp"
        android:layout_gravity="center"
        android:paddingLeft="10dp"
        app:backgroundTint="#e268ff"
        android:text="@string/btn_nota_menu"
        android:textColor="#ffffff"
        android:textStyle="bold"
        android:drawableLeft="@drawable/ic_nota"
        android:drawableRight="@drawable/ic_baseline_chevron_right_24"
        android:drawablePadding="25dp"/>

    <androidx.legacy.widget.Space
        android:layout_width="410dp"
        android:layout_height="10dp"/>

    <Button
        android:id="@+id/btnLink"
        android:layout_gravity="center"
        android:layout_width="335dp"
        android:layout_height="57dp"
        android:paddingLeft="10dp"
        app:backgroundTint="#E91E1E"
        android:text="@string/btn_link_menu"
        android:textStyle="bold"
        android:textColor="#ffffff"
        android:drawableLeft="@drawable/ic_world"
        android:drawableRight="@drawable/ic_baseline_chevron_right_24"
        android:drawablePadding="25dp" />

    <androidx.legacy.widget.Space
        android:layout_width="410dp"
        android:layout_height="10dp"/>

    <Button
        android:id="@+id/btnConfiguracion"
        android:layout_gravity="center"
        android:layout_width="335dp"
        android:layout_height="57dp"
        android:paddingLeft="10dp"
        app:backgroundTint="#1976D2"
        android:text="@string/btn_config_menu"
        android:textStyle="bold"
        android:textColor="#ffffff"
        android:drawableLeft="@drawable/ic_baseline_settings_24"
        android:drawableRight="@drawable/ic_baseline_chevron_right_24"
        android:drawablePadding="25dp"/>

</LinearLayout>