<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    card_view:cardCornerRadius="15dp"
    card_view:cardBackgroundColor="#FFE6E5E2"
    card_view:cardElevation="5dp"
    android:layout_margin="10dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="85dp"
            android:layout_height="85dp"
            android:src="@drawable/ilibro"
            android:layout_margin="5dp"
            android:contentDescription="@string/iv_curso_cardview" />
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp"
            android:gravity="center"
            android:weightSum="4">
            <TableRow
                android:layout_weight="1"
                android:weightSum="4"
                android:gravity="center|left">
                <TextView
                    android:text="@string/tv_idcurso_cardview"
                    android:textStyle="bold"
                    android:textSize="13sp"
                    android:textColor="@color/black"/>
                <androidx.legacy.widget.Space
                    android:layout_weight=".5"/>
                <TextView
                    android:layout_weight="2"
                    android:id="@+id/tvIdCurso"
                    android:text=""
                    android:textColor="@color/black"/>
            </TableRow>
            <TableRow
                android:layout_weight="1"
                android:weightSum="4"
                android:gravity="center|left">
                <TextView
                    android:text="@string/tv_nombrecurso_cardview"
                    android:textStyle="bold"
                    android:textSize="13sp"
                    android:textColor="@color/black"/>
                <androidx.legacy.widget.Space
                    android:layout_weight=".5"/>
                <TextView
                    android:layout_weight="2"
                    android:id="@+id/tvNombreCurso"
                    android:text=""
                    android:textSize="13sp"
                    android:textColor="@color/black"/>
            </TableRow>
            <TableRow
                android:layout_weight="1"
                android:weightSum="4"
                android:gravity="center|left">
                <TextView
                    android:text="@string/tv_descripcioncurso_cardview"
                    android:textStyle="bold"
                    android:textSize="13sp"
                    android:textColor="@color/black"/>
                <androidx.legacy.widget.Space
                    android:layout_weight=".5"/>
                <TextView
                    android:id="@+id/tvDescripcionCurso"
                    android:layout_weight="2"
                    android:text=""
                    android:textSize="13sp"
                    android:textColor="@color/black"/>
            </TableRow>
            <TableRow
                android:weightSum="4"
                android:layout_weight="1"
                android:gravity="center|left">
                <TextView
                    android:text="@string/tv_gradocurso_cardview"
                    android:textStyle="bold"
                    android:textSize="13sp"
                    android:textColor="@color/black"/>
                <androidx.legacy.widget.Space
                    android:layout_weight=".5"/>
                <TextView
                    android:id="@+id/tvGrado"
                    android:layout_weight="2"
                    android:text=""
                    android:textSize="13sp"
                    android:textColor="@color/black"/>
            </TableRow>
        </TableLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>