<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    card_view:cardCornerRadius="15dp"
    card_view:cardBackgroundColor="#CCA93F"
    card_view:cardElevation="5dp"
    android:layout_margin="10dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">
        <TextView
            android:id="@+id/tvNombreCursoNota"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:text=""
            android:textSize="24sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:gravity="center" />
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TableRow
                android:weightSum="4"
                android:layout_marginBottom="10dp">
                <TextView
                    android:layout_weight="1"
                    android:text="@string/tv_primerb_cardview_nota"
                    android:textStyle="bold"
                    android:textSize="15sp"
                    android:textColor="@color/black"
                    android:gravity="center"/>
                <TextView
                    android:layout_weight="1"
                    android:text="@string/tv_segundob_cardview_nota"
                    android:textStyle="bold"
                    android:textSize="15sp"
                    android:textColor="@color/black"
                    android:gravity="center"/>
                <TextView
                    android:layout_weight="1"
                    android:text="@string/tv_tercerb_cardview_nota"
                    android:textStyle="bold"
                    android:textSize="15sp"
                    android:textColor="@color/black"
                    android:gravity="center"/>
                <TextView
                    android:layout_weight="1"
                    android:text="@string/tv_cuartob_cardview_nota"
                    android:textStyle="bold"
                    android:textSize="15sp"
                    android:textColor="@color/black"
                    android:gravity="center"/>
            </TableRow>
            <TableRow
                android:weightSum="4">
                <TextView
                    android:id="@+id/tvPrimerBimestre"
                    android:layout_weight="1"
                    android:text=""
                    android:textColor="@color/black"
                    android:gravity="center" />
                <TextView
                    android:id="@+id/tvSegundoBimestre"
                    android:layout_weight="1"
                    android:text=""
                    android:textColor="@color/black"
                    android:gravity="center"/>
                <TextView
                    android:id="@+id/tvTercerBimestre"
                    android:layout_weight="1"
                    android:text=""
                    android:textColor="@color/black"
                    android:gravity="center"/>
                <TextView
                    android:id="@+id/tvCuartoBimestre"
                    android:layout_weight="1"
                    android:text=""
                    android:textColor="@color/black"
                    android:gravity="center"/>
            </TableRow>
        </TableLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>